--- a/package.json
+++ b/package.json
@@ -9,19 +9,43 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.5"
+    "@react-three/drei": "^10.5.0",
+    "@react-three/fiber": "^9.0.0-alpha.8",
+    "@tailwindcss/cli": "^4.1.11",
+    "clsx": "^2.1.1",
+    "motion": "^12.0.0-alpha.1",
+    "next": "15.3.5",
+    "react": "19.0.0-rc-de68d2f4-20241204",
+    "react-dom": "19.0.0-rc-de68d2f4-20241204",
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.178.0",
+    "three-globe": "^2.43.0"
+  },
+  "overrides": {
+    "motion": {
+      "react": "19.0.0-rc-de68d2f4-20241204",
+      "react-dom": "19.0.0-rc-de68d2f4-20241204"
+    },
+    "@react-three/fiber": {
+      "react": "19.0.0-rc-de68d2f4-20241204",
+      "react-dom": "19.0.0-rc-de68d2f4-20241204"
+    },
+    "@react-three/drei": {
+      "react": "19.0.0-rc-de68d2f4-20241204",
+      "react-dom": "19.0.0-rc-de68d2f4-20241204"
+    }
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
+    "typescript": "^5"
   }
 }
