--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@react-three/drei": "^10.5.0",
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@tailwindcss/cli": "^4.1.11",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "clsx": "^2.1.1",
     "motion": "^12.0.0-alpha.1",
     "next": "15.3.5",
