--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@react-three/drei": "^10.5.0",
     "@react-three/fiber": "^9.0.0-alpha.8",
+    "@tabler/icons-react": "^3.34.0",
     "@tailwindcss/cli": "^4.1.11",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "clsx": "^2.1.1",
-    "motion": "^12.0.0-alpha.1",
+    "motion": "^12.23.3",
     "next": "15.3.5",
     "react": "19.0.0-rc-de68d2f4-20241204",
     "react-dom": "19.0.0-rc-de68d2f4-20241204",
