--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.4",
     "dotted-map": "^2.2.3",
-    "motion": "^12.0.0-alpha.2",
+    "motion": "^12.23.6",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "react": "19.0.0-rc-de68d2f4-20241204",
